# onda

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
onda_control/: Cargo.toml
onda_control/src/: lib.rs
onda_control/src/application/: mod.rs
onda_control/src/domain/: mod.rs  producer.rs  voice_allocator.rs
onda_control/src/infra/: entrypoint.rs  mod.rs  static_producer.rs
onda_dsp/: Cargo.toml
onda_dsp/src/application/: dsp_engine.rs  mod.rs
onda_dsp/src/domain/: mod.rs  synthesizer.rs  voice.rs
onda_dsp/src/infra/: audio_output.rs  entrypoint.rs  mod.rs
onda_midi/: Cargo.toml
onda_midi/src/: lib.rs
onda_ui/: Cargo.toml
onda_ui/src/infra/: keyboard_entrypoint.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/constants/: voices.rs
shared/src/pages/: amp.rs  env.rs  filter.rs  fx.rs  lfo.rs  mod.rs  schema.rs  track.rs
shared/src/pages/synth/: mod.rs  wavetable.rs
shared/src/queues/: control.rs  dsp.rs  mod.rs  ui.rs
shared/src/types/: control.rs  dsp.rs  mod.rs  track.rs
src/: main.rs
